deploy/billing-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: billing
  namespace: dotmesh
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: billing
    spec:
      containers:
        - name: billing
          image: ${GCLOUD_BILLING_IMAGE}
          ports:
            - containerPort: 80
