deploy/communications-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: communications
  namespace: dotmesh
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: communications
    spec:
      containers:
        - name: communications
          image: ${GCLOUD_COMMUNICATIONS_IMAGE}
          ports:
            - containerPort: 80
