deploy/billing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing
  namespace: dotmesh
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: billing
