deploy/communications-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: communications
  namespace: dotmesh
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: communications
