deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotmesh
  namespace: dotmesh
spec:
  type: ClusterIP
  ports:
  - port: 6969
    protocol: TCP
  selector:
    name: dotmesh
